# Pause25

./: .gitignore  README.md  pyproject.toml  windows.manifest
src/pause25/: __init__.py  __main__.py  app.py  content.py  models.py  storage.py  timer.py
src/pause25/ui/: break_overlay.py  dpi.py  main_window.py  theme.py  timer_ring.py
tests/: test_break_overlay.py  test_content.py  test_dpi.py  test_storage.py  test_timer.py  test_timer_ring.py
